--- a/docs/mine-hnt/validators/testnet/wallet.mdx
+++ b/docs/mine-hnt/validators/testnet/wallet.mdx
@@ -10,17 +10,17 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 You’ll need an owner wallet to:
 
 - Stake your Testnet Network Tokens (TNT)
-- Receive validator node consensus group rewards
+- Receive Validator node consensus group rewards
 
-:::info You can have a single wallet for multiple validator nodes. However multiple wallets for a
-single validator node is not supported. A single stake transaction from a single wallet must be used
-to stake a validator.
+:::info You can have a single wallet for multiple Validator nodes. However multiple wallets for a
+single Validator node is not supported. A single stake transaction from a single wallet must be used
+to stake a Validator.
 
 :::
 
 :::warning
 
-Do NOT run or store the helium-wallet or wallet.key file on your validator. Backup the wallet.key
+Do NOT run or store the helium-wallet or wallet.key file on your Validator. Backup the wallet.key
 file and protect the password used to create the wallet.
 
 :::
@@ -75,18 +75,18 @@ submit it to the api. There is no undo.
 
 After you have received your TNT you need to stake these tokens.
 
-As part of the staking process the validator node address needs to be in the staking transaction and
-also needs to sign the transaction. After a wallet stakes a validator node, the wallet becomes that
-node’s owner, has control over that validator node, and receives rewards.
+As part of the staking process the Validator node address needs to be in the staking transaction and
+also needs to sign the transaction. After a wallet stakes a Validator node, the wallet becomes that
+node’s owner, has control over that Validator node, and receives rewards.
 
 #### To stake tokens perform the following:
 
-- Obtain the validator node address:
+- Obtain the Validator node address:
 
-  - On the validator, run `miner peer addr`. This will produce something like:
+  - On the Validator, run `miner peer addr`. This will produce something like:
     `/p2p/112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi`
 
-  In this example the part following the final slash is the validator node's public address:
+  In this example the part following the final slash is the Validator node's public address:
   `112sSfUCQrVNAfFKVZWUSCeLs67wH8o1xz4yj4nKSPJKBT8bUkXi`.
 
 - Stake single Validator with the TNT:
@@ -96,7 +96,7 @@ Use `--commit` after preview to submit the transaction to network.
 
 ### List Associated Validators
 
-It's possible to view a list of associated validators to a wallet, along with their current status.
+It's possible to view a list of associated Validators to a wallet, along with their current status.
 `./helium-wallet validators list` will produce a table similar to below:
 
 ```
@@ -107,13 +107,13 @@ It's possible to view a list of associated validators to a wallet, along with th
 +-----------------------------------------------------+-----------------------------------------------------+----------------+--------+
 ```
 
-This can be helpful in verifying staked validators or validators currently in cooldown after being
+This can be helpful in verifying staked Validators or Validators currently in cooldown after being
 unstaked.
 
 ### Unstake Tokens
 
-If you unstake tokens the validator node enters a stake cooldown period. During this cooldown period
-the validator node will not earn rewards and at the end of the cooldown period (currently 250,000
+If you unstake tokens the Validator node enters a stake cooldown period. During this cooldown period
+the Validator node will not earn rewards and at the end of the cooldown period (currently 250,000
 blocks or approximately 5.7 months in mainnet) your initial staking amount will be released to the
 wallet.
 
@@ -136,9 +136,9 @@ calculation, replace `250000` with `180`.
 The cooldown length, in blocks, is called `stake_withdrawal_cooldown` and is a chain variable. This
 variable is viewable by running `miner ledger variables stake_withdrawal_cooldown`.
 
-#### To unstake tokens from a validator node perform the following:
+#### To unstake tokens from a Validator node perform the following:
 
-Obtain the validator node public address as described in [the stake command](#stake-tokens) and
+Obtain the Validator node public address as described in [the stake command](#stake-tokens) and
 calculate the `stake-release-height` as defined above.
 
 `./helium-wallet validators unstake <public-address> --stake-release-height <stake release height>`
@@ -149,11 +149,11 @@ commit, you may need to recalculate the `stake-release-height` value.
 To check the status of the unstake transaction, it's possible to copy the received hash into the
 Explorer, or query the [API transaction](http://localhost:3000/api/blockchain/transactions). A
 successful unstake transaction will also change the status to `cooldown` when viewing
-[associated validators](#list-associated-validators) to the wallet.
+[associated Validators](#list-associated-validators) to the wallet.
 
 :::warning
 
-Once the unstake command is committed, this cannot be reversed. The validator will cease earning
+Once the unstake command is committed, this cannot be reversed. The Validator will cease earning
 rewards and the stake amount will not be returned to the staking wallet until the 250,000 block
 cooldown period has completed.
 
@@ -161,21 +161,21 @@ cooldown period has completed.
 
 :::info
 
-Once a validator has been successfully unstaked, it cannot be staked again. The validator may be
-stopped and deleted, including the `swarm_key`. Wallet commands to stake this validator's public
+Once a Validator has been successfully unstaked, it cannot be staked again. The Validator may be
+stopped and deleted, including the `swarm_key`. Wallet commands to stake this Validator's public
 address again will fail.
 
 :::
 
 ### Transfer stake
 
-A validator node's stake can be transferred to other validator nodes in the same wallet or a
+A Validator node's stake can be transferred to other Validator nodes in the same wallet or a
 different one.
 
-If the stake is transferred to a validator node in a different wallet, the owner of the other wallet
+If the stake is transferred to a Validator node in a different wallet, the owner of the other wallet
 must accept the transfer to complete the transaction.
 
-#### To transfer stake to a new validator node in the same wallet:
+#### To transfer stake to a new Validator node in the same wallet:
 
 `./helium-wallet validators transfer create --new-address <new-public-address> --old-address <old-public-address>`
 
@@ -198,11 +198,11 @@ This will produce an output similar to the following:
 
 ```
 
-#### To transfer stake to a new validator node in a different wallet:
+#### To transfer stake to a new Validator node in a different wallet:
 
 `./helium-wallet --format json validators transfer create --new-address <new-public-address> --old-address <old-public-address> --new-owner <new-owner-wallet-public-address>`
 
-**Note: you must transfer the stake to a new validator node. **
+**Note: you must transfer the stake to a new Validator node. **
 
 This will produce an output similar to the following:
 
@@ -227,8 +227,8 @@ You'll then need to send the txn value (a base64 string) to the new owner to be 
 
 :::info
 
-Once a validator has had a stake transferred from it, it cannot be staked again. The validator may
-be deleted, including the `swarm_key`. Wallet commands to stake this validator's public address
+Once a Validator has had a stake transferred from it, it cannot be staked again. The Validator may
+be deleted, including the `swarm_key`. Wallet commands to stake this Validator's public address
 again will fail.
 
 :::
