--- a/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
+++ b/docs/lorawan-on-helium/frequency-plans/frequency-plans.mdx
@@ -75,6 +75,126 @@ Also known as **US902-928**
 - Uplink channels 1-9 (RX1)
 - Helium uses the default parameters: 869.525 MHz / DR0 (SF12, 125 kHz)
 
+### AS923_1
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 923.2           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 923.4           | SF7BW125 to SF12BW125              |
+| 923.6           | SF7BW125 to SF12BW125              |
+| 923.8           | SF7BW125 to SF12BW125              |
+| 924.0           | SF7BW125 to SF12BW125              |
+| 924.2           | SF7BW125 to SF12BW125              |
+| 924.4           | SF7BW125 to SF12BW125              |
+| 924.6           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_1
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 923.2           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 923.4           | SF7BW125 to SF12BW125              |
+| 923.6           | SF7BW125 to SF12BW125              |
+| 923.8           | SF7BW125 to SF12BW125              |
+| 924.0           | SF7BW125 to SF12BW125              |
+| 924.2           | SF7BW125 to SF12BW125              |
+| 924.4           | SF7BW125 to SF12BW125              |
+| 924.6           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_1B (Malaysia)
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 922.0           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 922.2           | SF7BW125 to SF12BW125              |
+| 922.4           | SF7BW125 to SF12BW125              |
+| 922.6           | SF7BW125 to SF12BW125              |
+| 922.8           | SF7BW125 to SF12BW125              |
+| 923.0           | SF7BW125 to SF12BW125              |
+| 923.2           | SF7BW125 to SF12BW125              |
+| 923.4           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_2
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 921.4           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 921.6           | SF7BW125 to SF12BW125              |
+| 921.8           | SF7BW125 to SF12BW125              |
+| 922.0           | SF7BW125 to SF12BW125              |
+| 922.2           | SF7BW125 to SF12BW125              |
+| 922.4           | SF7BW125 to SF12BW125              |
+| 922.6           | SF7BW125 to SF12BW125              |
+| 922.8           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_3
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 916.6           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 916.8           | SF7BW125 to SF12BW125              |
+| 917.0           | SF7BW125 to SF12BW125              |
+| 917.2           | SF7BW125 to SF12BW125              |
+| 917.4           | SF7BW125 to SF12BW125              |
+| 917.6           | SF7BW125 to SF12BW125              |
+| 917.8           | SF7BW125 to SF12BW125              |
+| 918.0           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
+### AS923_4
+
+#### Uplink
+
+| Frequency (MHZ) | Spreading Factor                   |
+| :-------------- | :--------------------------------- |
+| 917.3           | SF7BW125 to SF12BW125 and SF7BW250 |
+| 917.5           | SF7BW125 to SF12BW125              |
+| 917.7           | SF7BW125 to SF12BW125              |
+| 917.9           | SF7BW125 to SF12BW125              |
+| 918.1           | SF7BW125 to SF12BW125              |
+| 918.3           | SF7BW125 to SF12BW125              |
+| 918.5           | SF7BW125 to SF12BW125              |
+| 918.7           | SF7BW125 to SF12BW125              |
+
+#### Downlink
+
+- Uplink channels 1-8 (RX1)
+- Helium uses the default parameters: 923.2 MHz / DR2 (SF10, 125 kHz)
+
 ### CN470
 
 #### Uplink
@@ -104,21 +224,23 @@ Also known as **US902-928**
 | 508.1           | SF7BW125 to SF12BW125 (RX1) |
 | 505.3           | SF12BW125 (RX2)             |
 
-### AU915
+### AU915_SB1
+
+- AU915 sub-band 1 (ch 0 to 7)
 
 #### Uplink
 
 | Frequency (MHZ) | Spreading Factor      |
 | :-------------- | :-------------------- |
-| 916.8           | SF7BW125 to SF12BW125 |
-| 917.0           | SF7BW125 to SF12BW125 |
-| 917.2           | SF7BW125 to SF12BW125 |
-| 917.4           | SF7BW125 to SF12BW125 |
-| 917.6           | SF7BW125 to SF12BW125 |
-| 917.8           | SF7BW125 to SF12BW125 |
-| 918.0           | SF7BW125 to SF12BW125 |
-| 918.2           | SF7BW125 to SF12BW125 |
-| 917.5           | SF8BW500              |
+| 915.2           | SF7BW125 to SF12BW125 |
+| 915.4           | SF7BW125 to SF12BW125 |
+| 915.6           | SF7BW125 to SF12BW125 |
+| 915.8           | SF7BW125 to SF12BW125 |
+| 916.0           | SF7BW125 to SF12BW125 |
+| 916.2           | SF7BW125 to SF12BW125 |
+| 916.4           | SF7BW125 to SF12BW125 |
+| 916.6           | SF7BW125 to SF12BW125 |
+| 915.9           | SF8BW500              |
 
 #### Downlink
 
@@ -134,392 +256,33 @@ Also known as **US902-928**
 | 927.5           | SF7BW500 to SF12BW500 (RX1) |
 | 923.3           | SF12BW500 (RX2)             |
 
-## Frequency Plans by Country
+### AU915_SB6 (DualPlan)
 
-Where a frequency plan is "Unknown", none of the above Frequency Plans have been known to
-be assigned by the local telecommnications or radio authority in that country for use by LoRaWAN.
-People in those countries are enouraged to contact the Helium Foundation LoRaWAN Committee via
-`#foundation` in the Helium Community Discord to help call to action the LoRaWAN Alliance to define a
-frequency plan for use in your country.
+- AU915 sub-band 6 (ch 40 to 47) (for DualPlan only)
 
-#### A <a id="a"></a>
+#### Uplink
 
-| Country                 | Frequency Plan         |
-| ----------------------- | ---------------------- |
-| Afghanistan             | Unknown                |
-| Aland Islands           | EU868                  |
-| Albania                 | EU868                  |
-| Algeria                 | AS923_3                |
-| American Samoa          | US915                  |
-| Andorra                 | EU868                  |
-| Angola                  | Unknown                |
-| Anguilla                | AU915                  |
-| Antarctica - Chilean    | AU915                  |
-| Antarctica - Australian | AU915                  |
-| Antarctica - British    | EU868                  |
-| Antarctica - Argentine  | AU915                  |
-| Antigua and Barbuda     | Unknown                |
-| Argentina               | AU915                  |
-| Armenia                 | EU868                  |
-| Aruba                   | Unknown                |
-| Australia               | AS923-1/AU915 dualplan |
-| Austria                 | EU868                  |
-| Azerbaijan              | EU433                  |
+| Frequency (MHZ) | Spreading Factor      |
+| :-------------- | :-------------------- |
+| 923.2           | SF7BW125 to SF12BW125 |
+| 923.4           | SF7BW125 to SF12BW125 |
+| 923.6           | SF7BW125 to SF12BW125 |
+| 923.8           | SF7BW125 to SF12BW125 |
+| 924.0           | SF7BW125 to SF12BW125 |
+| 924.2           | SF7BW125 to SF12BW125 |
+| 924.4           | SF7BW125 to SF12BW125 |
+| 924.6           | SF7BW125 to SF12BW125 |
 
-#### B <a id="b"></a>
+#### Downlink
 
-| Country                         | Frequency Plan |
-| ------------------------------- | -------------- |
-| Bahamas                         | US915          |
-| Bahrain                         | EU868          |
-| Bangladesh                      | AS923_1        |
-| Barbados                        | AU915          |
-| Belarus                         | EU868          |
-| Belgium                         | EU868          |
-| Belize                          | AU915          |
-| Benin                           | EU868          |
-| Bermuda                         | US915          |
-| Bhutan                          | EU868          |
-| Bolivia                         | AS923_1        |
-| Bonaire Sint Eustatius and Saba | EU868          |
-| Bosnia and Herzegovina          | EU868          |
-| Botswana                        | EU868          |
-| Bouvet Island                   | EU868          |
-| Brazil                          | AU915          |
-| British Indian Ocean Territory  | Unknown        |
-| British Virgin Islands          | AU915          |
-| Brunei                          | AS923_1        |
-| Bulgaria                        | EU868          |
-| Burkina Faso                    | Unknown        |
-| Burundi                         | EU868          |
-
-#### C <a id="c"></a>
-
-| Country                  | Frequency Plan         |
-| ------------------------ | ---------------------- |
-| Cambodia                 | AS923_1                |
-| Cameroon                 | EU433                  |
-| Canada                   | US915                  |
-| Cape Verde               | EU868                  |
-| Cayman Islands           | US915                  |
-| Central African Republic | Unknown                |
-| Chad                     | Unknown                |
-| Chile                    | AU915                  |
-| China                    | CN470                  |
-| Christmas Island         | AS923-1/AU915 dualplan |
-| Cocos [Keeling] Islands  | AS923-1/AU915 dualplan |
-| Colombia                 | AU915                  |
-| Comoros                  | EU868                  |
-| Congo [DRC]              | Unknown                |
-| Congo [Republic]         | Unknown                |
-| Cook Islands             | AS923-1/AU915 dualplan |
-| Costa Rica               | AS923_1                |
-| Côte d'Ivoire            | EU868                  |
-| Croatia                  | EU868                  |
-| Cuba                     | AS923_3                |
-| Curaçao                  | AS923_1                |
-| Cyprus                   | EU868                  |
-| Czech Republic           | EU868                  |
-
-#### D <a id="d"></a>
-
-| Country            | Frequency Plan |
-| ------------------ | -------------- |
-| Denmark            | EU868          |
-| Djibouti           | Unknown        |
-| Dominica           | AU915          |
-| Dominican Republic | AU915          |
-
-#### E <a id="e"></a>
-
-| Country              | Frequency Plan |
-| -------------------- | -------------- |
-| Ecuador              | AU915          |
-| Egypt                | EU868          |
-| El Salvador          | AU915          |
-| Equatorial Guinea    | EU868          |
-| Eritrea              | Unknown        |
-| Estonia              | EU868          |
-| Eswatini [Swaziland] | Unknown        |
-| Ethiopia             | Unknown        |
-
-#### F <a id="f"></a>
-
-| Country                           | Frequency Plan |
-| --------------------------------- | -------------- |
-| Falkland Islands [Islas Malvinas] | EU868          |
-| Faroe Islands                     | EU868          |
-| Fiji                              | Unknown        |
-| Finland                           | EU868          |
-| France                            | EU868          |
-| French Guiana                     | EU868          |
-| French Polynesia                  | EU868          |
-| French Southern Territories       | EU868          |
-
-#### G <a id="g"></a>
-
-| Country       | Frequency Plan |
-| ------------- | -------------- |
-| Gabon         | Unknown        |
-| Gambia        | EU433          |
-| Gaza Strip    | Unknown        |
-| Georgia       | EU868          |
-| Germany       | EU868          |
-| Ghana         | EU433          |
-| Gibraltar     | EU868          |
-| Greece        | EU868          |
-| Greenland     | EU868          |
-| Grenada       | AU915          |
-| Guadeloupe    | EU868          |
-| Guam          | US915          |
-| Guatemala     | AU915          |
-| Guernsey      | EU868          |
-| Guinea        | EU433          |
-| Guinea-Bissau | Unknown        |
-| Guyana        | US915          |
-
-#### H <a id="h"></a>
-
-| Country                           | Frequency Plan         |
-| --------------------------------- | ---------------------- |
-| Haiti                             | Unknown                |
-| Heard Island and McDonald Islands | AS923-1/AU915 dualplan |
-| Honduras                          | AU915                  |
-| Hong Kong                         | AS923_1                |
-| Hungary                           | EU868                  |
-
-#### I <a id="i"></a>
-
-| Country     | Frequency Plan |
-| ----------- | -------------- |
-| Iceland     | EU868          |
-| India       | IN865          |
-| Indonesia   | AS923_2        |
-| Iran        | EU868          |
-| Iraq        | Unknown        |
-| Ireland     | EU868          |
-| Isle of Man | EU868          |
-| Israel      | AS923_4        |
-| Italy       | EU868          |
-
-#### J <a id="j"></a>
-
-| Country | Frequency Plan |
-| ------- | -------------- |
-| Jamaica | AU915          |
-| Japan   | AS923_1        |
-| Jersey  | EU868          |
-| Jordan  | IN865          |
-
-#### K <a id="k"></a>
-
-| Country    | Frequency Plan |
-| ---------- | -------------- |
-| Kazakhstan | IN865          |
-| Kenya      | EU868          |
-| Kiribati   | Unknown        |
-| Kosovo     | EU868          |
-| Kuwait     | EU868          |
-| Kyrgyzstan | Unknown        |
-
-#### L <a id="l"></a>
-
-| Country       | Frequency Plan |
-| ------------- | -------------- |
-| Laos          | AS923_1        |
-| Latvia        | EU868          |
-| Lebanon       | EU868          |
-| Lesotho       | EU433          |
-| Liberia       | Unknown        |
-| Libya         | Unknown        |
-| Liechtenstein | EU868          |
-| Lithuania     | EU868          |
-| Luxembourg    | EU868          |
-
-#### M <a id="m"></a>
-
-| Country          | Frequency Plan |
-| ---------------- | -------------- |
-| Macau            | AS923_1        |
-| North Macedonia  | EU868          |
-| Madagascar       | EU868          |
-| Malawi           | Unknown        |
-| Malaysia         | AS923_1B       |
-| Maldives         | Unknown        |
-| Mali             | EU433          |
-| Malta            | EU868          |
-| Marshall Islands | Unknown        |
-| Martinique       | EU868          |
-| Mauritania       | EU868          |
-| Mauritius        | EU433          |
-| Mayotte          | EU868          |
-| Mexico           | US915          |
-| Micronesia       | Unknown        |
-| Moldova          | EU868          |
-| Monaco           | EU868          |
-| Mongolia         | Unknown        |
-| Montenegro       | EU868          |
-| Montserrat       | AU915          |
-| Morocco          | EU433          |
-| Mozambique       | Unknown        |
-| Myanmar [Burma]  | AS923_1        |
-
-#### N <a id="n"></a>
-
-| Country                  | Frequency Plan         |
-| ------------------------ | ---------------------- |
-| Namibia                  | EU868                  |
-| Nauru                    | Unknown                |
-| Nepal                    | Unknown                |
-| Netherlands              | EU868                  |
-| Netherlands Antilles     | EU868                  |
-| New Caledonia            | EU868                  |
-| New Zealand              | AS923-1/AU915 dualplan |
-| Nicaragua                | AU915                  |
-| Niger                    | IN865                  |
-| Nigeria                  | EU868                  |
-| Niue                     | AS923-1/AU915 dualplan |
-| Norfolk Island           | AS923-1/AU915 dualplan |
-| North Korea              | Unknown                |
-| Northern Mariana Islands | US915                  |
-| Norway                   | EU868                  |
-
-#### O <a id="o"></a>
-
-| Country | Frequency Plan |
-| ------- | -------------- |
-| Oman    | EU868          |
-
-#### P <a id="p"></a>
-
-| Country                 | Frequency Plan         |
-| ----------------------- | ---------------------- |
-| Pakistan                | AS923                  |
-| Palau                   | Unknown                |
-| Palestinian Territories | Unknown                |
-| Panama                  | AU915                  |
-| Papua New Guinea        | AS923-1/AU915 dualplan |
-| Paraguay                | AU915                  |
-| Peru                    | AU915                  |
-| Philippines             | AS923_3                |
-| Pitcairn Islands        | Unknown                |
-| Poland                  | EU868                  |
-| Portugal                | EU868                  |
-| Puerto Rico             | US915                  |
-
-#### Q <a id="q"></a>
-
-| Country | Frequency Plan |
-| ------- | -------------- |
-| Qatar   | EU868          |
-
-#### R <a id="r"></a>
-
-| Country | Frequency Plan |
-| ------- | -------------- |
-| Réunion | EU868          |
-| Romania | EU868          |
-| Russia  | RU864          |
-| Rwanda  | EU868          |
-
-#### S <a id="s"></a>
-
-| Country                                      | Frequency Plan |
-| -------------------------------------------- | -------------- |
-| Sahrawi Arab Democratic Republic             | Unknown        |
-| Saint Barthelemy                             | EU868          |
-| Saint Helena                                 | Unknown        |
-| Saint Kitts and Nevis                        | AU915          |
-| Saint Lucia                                  | AU915          |
-| Saint Martin                                 | EU868          |
-| Saint Pierre and Miquelon                    | EU868          |
-| Saint Vincent and the Grenadines             | AU915          |
-| Samoa                                        | EU868          |
-| San Marino                                   | EU868          |
-| São Tomé and Príncipe                        | Unknown        |
-| Saudi Arabia                                 | EU868          |
-| Senegal                                      | EU868          |
-| Serbia                                       | EU868          |
-| Seychelles                                   | EU433          |
-| Sierra Leone                                 | Unknown        |
-| Singapore                                    | AS923_1        |
-| Slovakia                                     | EU868          |
-| Slovenia                                     | EU868          |
-| Solomon Islands                              | AS923_1        |
-| Somalia                                      | EU868          |
-| South Africa                                 | EU868          |
-| South Georgia and the South Sandwich Islands | EU868          |
-| South Korea                                  | KR920          |
-| South Sudan                                  | Unknown        |
-| Spain                                        | EU868          |
-| Sri Lanka                                    | AS923_1        |
-| Sudan                                        | Unknown        |
-| Suriname                                     | AU915          |
-| Svalbard and Jan Mayen                       | EU868          |
-| Swaziland see Eswatini                       | -              |
-| Sweden                                       | EU868          |
-| Switzerland                                  | EU868          |
-| Syria                                        | EU868          |
-
-#### T <a id="t"></a>
-
-| Country                  | Frequency Plan         |
-| ------------------------ | ---------------------- |
-| Taiwan                   | AS923_1                |
-| Tajikistan               | Unknown                |
-| Tanzania                 | AS923_1                |
-| Thailand                 | AS923_1                |
-| Timor-Leste              | Unknown                |
-| Togo                     | EU433                  |
-| Tokelau                  | AS923-1/AU915 dualplan |
-| Tonga                    | AU915                  |
-| Trinidad and Tobago      | AU915                  |
-| Tunisia                  | EU868                  |
-| Turkey                   | EU868                  |
-| Turkmenistan             | Unknown                |
-| Turks and Caicos Islands | AU915                  |
-| Tuvalu                   | Unknown                |
-
-#### U <a id="u"></a>
-
-| Country                     | Frequency Plan |
-| --------------------------- | -------------- |
-| U.S. Minor Outlying Islands | US915          |
-| U.S. Virgin Islands         | US915          |
-| Uganda                      | AS923-1        |
-| Ukraine                     | EU868          |
-| United Arab Emirates        | EU868          |
-| United Kingdom              | EU868          |
-| United States               | US915          |
-| Uruguay                     | AU915          |
-| Uzbekistan                  | EU433          |
-
-#### V <a id="v"></a>
-
-| Country                 | Frequency Plan |
-| ----------------------- | -------------- |
-| Vanuatu                 | AS923_3        |
-| Vatican City (Holy See) | EU868          |
-| Venezuela               | AS923_1        |
-| Vietnam                 | AS923_2        |
-| Virgin Islands (UK)     | AU915          |
-
-#### W <a id="w"></a>
-
-| Country           | Frequency Plan |
-| ----------------- | -------------- |
-| Wallis and Futuna | EU868          |
-| Western Sahara    | Unknown        |
-
-#### Y <a id="y"></a>
-
-| Country | Frequency Plan |
-| ------- | -------------- |
-| Yemen   | Unknown        |
-
-#### Z <a id="z"></a>
-
-| Country  | Frequency Plan |
-| -------- | -------------- |
-| Zambia   | EU868          |
-| Zimbabwe | EU868          |
+| Frequency (MHZ) | Spreading Factor            |
+| :-------------- | :-------------------------- |
+| 923.3           | SF7BW500 to SF12BW500 (RX1) |
+| 923.9           | SF7BW500 to SF12BW500 (RX1) |
+| 924.5           | SF7BW500 to SF12BW500 (RX1) |
+| 925.1           | SF7BW500 to SF12BW500 (RX1) |
+| 925.7           | SF7BW500 to SF12BW500 (RX1) |
+| 926.3           | SF7BW500 to SF12BW500 (RX1) |
+| 926.9           | SF7BW500 to SF12BW500 (RX1) |
+| 927.5           | SF7BW500 to SF12BW500 (RX1) |
+| 923.3           | SF12BW500 (RX2)             |
