--- a/docs/oracles/oracles.mdx
+++ b/docs/oracles/oracles.mdx
@@ -37,4 +37,4 @@ What is new includes:
 2. Sample API code has been published
    [here](https://github.com/dewi-alliance/oracle-observer-sample).
 3. Third parties are working on new APIs and services to replace existing tools (Hotspotty,
-   [HeliumGeek](https://heliumgeek.com), Relay, etc.).
+   [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html), Relay, etc.).
